# graphd

./: .gitignore  CMakeLists.txt  README.md
conf/: graphd.conf
src/: common.hpp  main.cpp
src/core/: config.cpp  config.hpp  log.cpp  log.hpp  server.cpp  server.hpp  telemetry.cpp  telemetry.hpp
src/db/: database.cpp  database.hpp  edge.cpp  edge.hpp  graph.cpp  graph.hpp  vertex.cpp  vertex.hpp
src/db/io/: dmgr.cpp  dmgr.h  serialization.hpp
src/db/types/: id.cpp  id.hpp  interfaces.hpp  properties.cpp  properties.hpp
src/types/: errors.hpp  interfaces.hpp
